# datasci415_proj

./: .gitignore  README.md  pyproject.toml
PROJECT_CODE/: main.py
PROJECT_CODE/results/: test_metrics.csv  training_history_retrained.csv
PROJECT_PAPER/: draft_report.aux  draft_report.blg  draft_report.fdb_latexmk  draft_report.fls  draft_report.out  draft_report.tex  final_report.tex  proposal.tex  references.bib
