
[tool.poetry]
name = "legal-evolution"
version = "0.1.0"
description = ""
authors = ["Harry Sanders <harrison.w.sanders@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
transformers = "^4.46.3"
tqdm = "^4.67.0"
torch-geometric = "^2.6.1"
optuna = "^4.1.0"
plotly = "^5.24.1"
seaborn = "^0.13.2"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
